--- a/xp-multi-select-behavior.html
+++ b/xp-multi-select-behavior.html
@@ -14,6 +14,7 @@ This behavior is used to add multi selection capabilities on the context element
 @keywords web app, html5, expandjs, web-components
 @group behaviors
 @homepage http://expandjs.com/elements/xp-multi-select-behavior
+@repository https://github.com/ExpandJS/xp-multi-select-behavior
 
 @behavior xp-selected-behavior /bower_components/xp-selected-behavior/xp-selected-behavior.html
 
